--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.2.10
 Django==3.1.1
+django-cleanup==5.1.0
+django-cors-headers==3.6.0
 django-filter==2.4.0
 djangorestframework==3.12.2
 Markdown==3.3.3
+Pillow==8.1.0
 pytz==2020.5
 sqlparse==0.4.1
